--- a/index.html
+++ b/index.html
@@ -273,11 +273,11 @@
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
-    <pre><code>@article{park2021nerfies,
-  author    = {Park, Keunhong and Sinha, Utkarsh and Barron, Jonathan T. and Bouaziz, Sofien and Goldman, Dan B and Seitz, Steven M. and Martin-Brualla, Ricardo},
-  title     = {Nerfies: Deformable Neural Radiance Fields},
-  journal   = {ICCV},
-  year      = {2021},
+    <pre><code>@article{shao2024gfnerf,
+  title     = {Global-guided Focal Neural Radiance Field for Large-scale Scene Rendering},
+  author    = {Shao, Mingqi and Xiong, Feng and Zhang, Hang and Yang, Shuang and Xu, Mu and Bian, Wei and Wang, Xueqian},
+  journal   = {arXiv preprint arXiv:2403.12839},
+  year      = {2024},
 }</code></pre>
   </div>
 </section>
