--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
       <div class="columns is-centered">
         <div class="column has-text-centered">
           <h1 class="title is-1 publication-title">GF-NeRF:<br> Global-guided Focal Neural Radiance Field for Large-scale Scene Rendering</h1>
+          <h2 class="title is-4 publication-title"> WACV 2025</h2>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
               <a href="https://shaomq2187.github.io/GF-NeRF/">Mingqi Shao</a><sup>1,2</sup>,</span>
@@ -106,7 +107,7 @@
           </div>
 
           <div class="is-size-5 publication-authors">
-            <span class="author-block"><sup>1</sup>Tsinghua Shenzhen International Graduate School,</span>
+            <span class="author-block"><sup>1</sup>Tsinghua Shenzhen International Graduate School</span> 
             <span class="author-block"><sup>2</sup>AMAP</span>
           </div>
 
@@ -148,14 +149,14 @@
               </span> -->
               <!-- Code Link. -->
               <span class="link-block">
-                <a href="https://shaomq2187.github.io/GF-NeRF/"
+                <a href="https://github.com/shaomq2187/GF-NeRF"
                    class="external-link button is-normal is-rounded is-dark"
                    style="width: 150px; height: 50px; font-size: 20px;"
                    >
                   <span class="icon">
                       <i class="fab fa-github"></i>
                   </span>
-                  <span>Code(Soon)</span>
+                  <span>Code</span>
                   </a>
               </span>
               <!-- Dataset Link. -->
